more methods and todos

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,3 @@
+- do coordinates need dimension methods?
 - do we need coordsequences? for duplicated coords and unclosed coord sequences?
+- check geometry methods against geos, shapely
